--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,7 +34,7 @@
     <ul class="list-group">
         {% for id, title, last_movement in juicios %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            {{ title }} - Último Movimiento: {{ last_movement }}
+            {{ title }}
             <div>
                 <a href="/movimientos/{{ id }}" class="btn btn-link">Ver Movimientos</a>
                 <a href="/edit/{{ id }}" class="btn btn-warning">Editar</a>
